bugfix for sag && adjust log level